Update and port Extended Crafting mappers
also added flux crafter mapper